[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structure = "0.1.2"
reqwest = "0.11.13"
bytes = "1.3.0"
byteio = "0.2.3"
bit-vec = "0.6.3"

[lib]
name = "lib"
path = "src/lib.rs"